--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <nav>
+    <nav class="buttonWrapper">
     <div class="button1"> projecten</div>
     <div class="button2">studie</div>
     <div class="button3">contact</div>
