--- a/page2.html
+++ b/page2.html
@@ -20,16 +20,14 @@
         </nav>
         <p> projecten</p>
     </header>
-    <main>
-        <div class="cube1"></div>
-        <div class="cube2"></div>
-        <div class="cube3"></div>
-        <div class="cube4"></div>
-        <div class="cube5"></div>
-        <div class="cube6"></div>
-        <div class="cube7"></div>
-        <div class="cube8"></div>
-        <div class="cube9"></div>
+    <main class="cubes">
+        <div class="cube cube1"></div>
+        <div class="cube cube2"></div>
+        <div class="cube cube3"></div>
+        <div class="cube cube4"></div>
+        <div class="cube cube5"></div>
+        <div class="cube cube6"></div>
+        
 
     </main>
 
