--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+
     <nav class="buttonWrapper">
     <div class="button1"> projecten</div>
     <div class="button2">studie</div>
@@ -19,18 +20,16 @@
 
     <article class="img-placeholder">
  <img src="/img/Schermafbeelding 2022-11-17 125401.png" alt="pasfoto">
-    </article>
 
-    <article>
-        <p>
-            Mijn naam is Nasim. Ik ben 17 jaar. <br>
+ <p class="text">
+    Mijn naam is Nasim. Ik ben 17 jaar. <br>
 
 Mijn hobby's zijn gamen(Ik speel nu vooral Splatoon 3. Ik heb een switch, een ps4 en ik had vroeger een 3ds) en manga lezen.
- Ik studeer nu op het ROC Mondriaan college op het mbo. Ik studeer software en development
+Ik studeer nu op het ROC Mondriaan college op het mbo. Ik studeer software en development
 Op deze website vind je informatie over mij. De bedoeling van deze site is om dingen over mij te vertellen
-
-        </p>
+</p>
     </article>
+
     </main>
 
 
