--- a/page2.html
+++ b/page2.html
@@ -20,9 +20,9 @@
         </nav>
         <p> projecten</p>
     </header>
-    <main class="cubes">
-        <div class="cube cube1"></div>
-        <div class="cube cube2"></div>
+    <main class="wrapper">
+        <div class="cube cube1"><p>in de eerste periode van mijn schooljaar ben ik bezig geweest met het programmeren van een hoger lager spel</p></div>
+        <div class="cube cube2"><p>ik ben nu bezig met het programeren van een boter kaas en eieren spel</p></div>
         <div class="cube cube3"></div>
         <div class="cube cube4"></div>
         <div class="cube cube5"></div>
