Home pagina mobiele versie afgemaakt

--- a/index.html
+++ b/index.html
@@ -14,10 +14,18 @@
     <div class="button1"> projecten</div>
     <div class="button2">studie</div>
     <div class="button3">contact</div>
-    </nav>    
-    <main>
-    <header>Over mij</header>
+    </nav>  
 
+    <nav class="navigation">
+        <div class="block1">projecten</div>
+        <div class="block2">studie</div>
+        <div class="block3">contact</div>
+    </nav> 
+    
+    <main>
+
+    <header>Over mij</header>
+    <!-- <p class="name">nasim Saaïdi </p> -->
     <article class="img-placeholder">
  <img src="/img/Schermafbeelding 2022-11-17 125401.png" alt="pasfoto">
 
