--- a/page2.html
+++ b/page2.html
@@ -12,12 +12,18 @@
 <body>
 
     <header>
-        <nav>
-            <div class="button1"> projecten</div>
+        <nav class="display">
+            <div class="button1"> over mij</div>
             <div class="button2">studie</div>
             <div class="button3">contact</div>
             
         </nav>
+        <nav class="navigation">
+            <div class="block1">over mij</div>
+            <div class="block2">studie</div>
+            <div class="block3">contact</div>
+        </nav> 
+        
         <p> projecten</p>
     </header>
     <main class="wrapper">
