--- a/page3.html
+++ b/page3.html
@@ -11,18 +11,24 @@
 
 <body>
     <main>
-        <nav>
+        <nav class="blocks">
             <div class="button1"> Over mij</div>
             <div class="button2">Projecten</div>
             <div class="button3">contact</div>
         </nav>
+        <nav class="navigation">
+            <div class="block1">projecten</div>
+            <div class="block2">studie</div>
+            <div class="block3">contact</div>
+        </nav> 
     </main>
-    <div>
+    <div class="wrapper">
         <article>
             <p class="studie">Studie</p>
         </article>
         <article class="content">
-            <img src="/img/153029_Laak2 nieuwbouw.jpg" alt="roc-mondriaan laaghwaterplein">
+            <img class="mondriaan" src="/img/153029_Laak2 nieuwbouw.jpg" alt="roc-mondriaan laaghwaterplein">
+            <img class="logo "src="/img/download (1).png" alt="">
             <p class="text">Ik zit op het ROC Mondriaan op het leeghwaterplein. Ik koos deze school nadat ik niet
                 doorging naar 5-havo. In de laatste paar weken zijn we bezig geweest met coderen. We werken in sprinten:
                 weken waarin we een bepaalde aantal opdrachten doen. Wij zijn bezig met javascript, html en CSS</p>
