--- a/page4.html
+++ b/page4.html
@@ -9,11 +9,16 @@
 </head>
 <body>
     <main>
-        <nav>
+        <nav class="blocks">
             <div class="button1"> Over mij</div>
             <div class="button2">Projecten</div>
             <div class="button3">contact</div>
         </nav>
+        <nav class="navigation">
+            <div class="block1">projecten</div>
+            <div class="block2">studie</div>
+            <div class="block3">contact</div>
+        </nav> 
     </main>
     <br>
     <article class="contact">
@@ -24,8 +29,9 @@
         <img src="/img/Schermafbeelding 2022-12-10 160033.png" alt="">
     </article>
     <br>
-    <p class="content">e-mail:</p>
-    <p class="content">302263973@student.rocmondriaan.nl</p>
-
+    <div class="content">
+    <p class="e-mail">E-mail:</p>
+    <p class="e-mailText">302263973@student.rocmondriaan.nl</p>
+</div>
 </body>
 </html>
