Website volledig responsive gemaakt

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 
     <nav class="buttonWrapper">
-    <div class="button1"> projecten</div>
-    <div class="button2">studie</div>
-    <div class="button3">contact</div>
+        <div class="button1"> <a href="page4.html">contact</a></div> 
+        <div class="button2"> <a href="/page2.html">projecten</a></div>
+        <div class="button3"> <a href="/page3.html">studie</a></div>
     </nav>  
 
     <nav class="navigation">
-        <div class="block1">projecten</div>
-        <div class="block2">studie</div>
-        <div class="block3">contact</div>
+        <div class="block1"> <a href="/page2.html">Projecten</a> </div>
+            <div class="block2"> <a href="/page3.html">Studie</a></div>
+            <div class="block3"><a href="/page4.html">Contact</a></div>
     </nav> 
     
     <main>
