--- a/page2.html
+++ b/page2.html
@@ -13,15 +13,15 @@
 
     <header>
         <nav class="display">
-            <div class="button1"> over mij</div>
-            <div class="button2">studie</div>
-            <div class="button3">contact</div>
+            <div class="button1"> <a href="index.html">Over mij</a></div> 
+            <div class="button2"> <a href="/page3.html">studie</a></div>
+            <div class="button3"> <a href="/page4.html">contact</a></div>
             
         </nav>
         <nav class="navigation">
-            <div class="block1">over mij</div>
-            <div class="block2">studie</div>
-            <div class="block3">contact</div>
+            <div class="block1"> <a href="/index.html">Over mij</a> </div>
+            <div class="block2"> <a href="/page3.html">studie</a></div>
+            <div class="block3"><a href="/page4.html">contact</a></div>
         </nav> 
         
         <p> projecten</p>
