--- a/page4.html
+++ b/page4.html
@@ -10,14 +10,14 @@
 <body>
     <main>
         <nav class="blocks">
-            <div class="button1"> Over mij</div>
-            <div class="button2">Projecten</div>
-            <div class="button3">contact</div>
+            <div class="button1"> <a href="index.html">Over mij</a></div> 
+            <div class="button2"> <a href="/page2.html">Projecten</a></div>
+            <div class="button3"> <a href="/page3.html">Studie</a></div>
         </nav>
         <nav class="navigation">
-            <div class="block1">projecten</div>
-            <div class="block2">studie</div>
-            <div class="block3">contact</div>
+            <div class="block1"> <a href="/index.html">Over mij</a> </div>
+            <div class="block2"> <a href="/page2.html">Projecten</a></div>
+            <div class="block3"><a href="/page3.html">Studie</a></div>
         </nav> 
     </main>
     <br>
@@ -31,7 +31,7 @@
     <br>
     <div class="content">
     <p class="e-mail">E-mail:</p>
-    <p class="e-mailText">302263973@student.rocmondriaan.nl</p>
+    <p class="e-mailText">>302263973@student.rocmondriaan.nl </p>
 </div>
 </body>
 </html>
