--- a/page3.html
+++ b/page3.html
@@ -12,14 +12,14 @@
 <body>
     <main>
         <nav class="blocks">
-            <div class="button1"> Over mij</div>
-            <div class="button2">Projecten</div>
-            <div class="button3">contact</div>
+            <div class="button1"> <a href="index.html">Over mij</a></div> 
+            <div class="button2"> <a href="/page2.html">Projecten</a></div>
+            <div class="button3"> <a href="/page4.html">contact</a></div>
         </nav>
         <nav class="navigation">
-            <div class="block1">projecten</div>
-            <div class="block2">studie</div>
-            <div class="block3">contact</div>
+            <div class="block1"> <a href="/index.html">Over mij</a> </div>
+            <div class="block2"> <a href="/page2.html">Projecten</a></div>
+            <div class="block3"><a href="/page4.html">contact</a></div>
         </nav> 
     </main>
     <div class="wrapper">
