--- a/page4.html
+++ b/page4.html
@@ -10,8 +10,10 @@
 <body>
     <main>
         <nav class="blocks">
-            <div class="button1"> <a href="index.html">Over mij</a></div> 
-            <div class="button2"> <a href="/page2.html">Projecten</a></div>
+            <div class="button1"> 
+                <a href="index.html"> Over mij</a>
+            </div> 
+            <div class="button2"> <a href="/page2.html"> Projecten</a></div>
             <div class="button3"> <a href="/page3.html">Studie</a></div>
         </nav>
         <nav class="navigation">
@@ -22,7 +24,9 @@
     </main>
     <br>
     <article class="contact">
-        <p>Contact</p>
+        <p>
+            Contact
+        </p>
     </article>
     <br>
     <article>
