--- a/page2.html
+++ b/page2.html
@@ -27,9 +27,9 @@
         <p> projecten</p>
     </header>
     <main class="wrapper">
-        <div class="cube cube1"><p>in de eerste periode van mijn schooljaar ben ik bezig geweest met het programmeren van een hoger lager spel</p></div>
-        <div class="cube cube2"><p>ik ben nu bezig met het programeren van een boter kaas en eieren spel</p></div>
-        <div class="cube cube3"></div>
+        <div class="cube cube1"> <p><a href="https://github.com/nasim-saaidi/higherlower">in de eerste periode van mijn schooljaar ben ik bezig geweest met het programmeren van een hoger lager spel</a></p></div>
+        <div class="cube cube2"> <p> <a href="https://github.com/arjunsantokhi/Escape-Room"> ik hebt in de themaweek na de eerste periode een escaperoom geprogrammeerd met klasgenoten </a> </p></div>
+        <div class="cube cube3"> <p> <a href="https://github.com/nasim-saaidi/grid-project"> in de tweede periode van mijn eerste schooljaar ben ik bezig geweest met het programmeren van een boter-kaas-en eieren spel</a></p></div>
         <div class="cube cube4"></div>
         <div class="cube cube5"></div>
         <div class="cube cube6"></div>
