--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,36 +8,49 @@
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-
-
     <nav class="buttonWrapper">
-        <div class="button1"> <a href="page4.html">contact</a></div> 
-        <div class="button2"> <a href="/page2.html">projecten</a></div>
-        <div class="button3"> <a href="/page3.html">studie</a></div>
-    </nav>  
-
+        <div class="button1">
+            <a href="page4.html">contact</a>
+        </div>
+        <div class="button2">
+            <a href="/page2.html">projecten</a>
+        </div>
+        <div class="button3">
+            <a href="/page3.html">studie</a>
+        </div>
+    </nav>
     <nav class="navigation">
-        <div class="block1"> <a href="/page2.html">Projecten</a> </div>
-            <div class="block2"> <a href="/page3.html">Studie</a></div>
-            <div class="block3"><a href="/page4.html">Contact</a></div>
-    </nav> 
-    
+        <div class="block1">
+            <a href="/page2.html">Projecten</a>
+        </div>
+        <div class="block2">
+            <a href="/page3.html">Studie</a>
+        </div>
+        <div class="block3">
+            <a href="/page4.html">Contact</a>
+        </div>
+    </nav>
+
     <main>
 
-    <header>Over mij</header>
-    <!-- <p class="name">nasim Saaïdi </p> -->
-    <article class="img-placeholder">
- <img src="/img/Schermafbeelding 2022-11-17 125401.png" alt="pasfoto">
+        <header>Over mij</header>
+        <!-- <p class="name">nasim Saaïdi </p> -->
+        <article class="img-placeholder">
+            <img src="/img/Schermafbeelding 2022-11-17 125401.png" alt="pasfoto">
 
- <p class="text">
-    Mijn naam is Nasim. Ik ben 17 jaar. <br>
+            <p class="text">
+                Mijn naam is Nasim. Ik ben 17 jaar.
+                <br>
 
-Mijn hobby's zijn gamen(Ik speel nu vooral Splatoon 3. Ik heb een switch, een ps4 en ik had vroeger een 3ds) en manga lezen.
-Ik studeer nu op het ROC Mondriaan college op het mbo. Ik studeer software en development
-Op deze website vind je informatie over mij. De bedoeling van deze site is om dingen over mij te vertellen
-</p>
-    </article>
+                Mijn hobby's zijn gamen(Ik speel nu vooral Splatoon 3. Ik heb een switch, een ps4 en ik had vroeger een
+                3ds) en manga lezen.
+                Ik studeer nu op het ROC Mondriaan college op het mbo. Ik studeer software en development
+                Op deze website vind je informatie over mij. De bedoeling van deze site is om dingen over mij te
+                vertellen
+            </p>
+        </article>
 
     </main>
 
@@ -45,4 +59,5 @@ Op deze website vind je informatie over mij. De bedoeling van deze site is om di
 
 
 </body>
+
 </html>
