--- a/page2.html
+++ b/page2.html
@@ -13,23 +13,41 @@
 
     <header>
         <nav class="display">
-            <div class="button1"> <a href="index.html">Over mij</a></div> 
-            <div class="button2"> <a href="/page3.html">studie</a></div>
-            <div class="button3"> <a href="/page4.html">contact</a></div>
+            <div class="button1">
+                 <a href="index.html">Over mij</a>
+                </div> 
+            <div class="button2"> 
+                <a href="/page3.html">studie</a>
+            </div>
+            <div class="button3">
+                 <a href="/page4.html">contact</a>
+                </div>
             
         </nav>
         <nav class="navigation">
-            <div class="block1"> <a href="/index.html">Over mij</a> </div>
-            <div class="block2"> <a href="/page3.html">studie</a></div>
-            <div class="block3"><a href="/page4.html">contact</a></div>
+            <div class="block1"> 
+                <a href="/index.html">Over mij</a> 
+            </div>
+            <div class="block2"> 
+                <a href="/page3.html">studie</a>
+            </div>
+            <div class="block3">
+                <a href="/page4.html">contact</a>
+            </div>
         </nav> 
         
         <p> projecten</p>
     </header>
     <main class="wrapper">
-        <div class="cube cube1"> <p><a href="https://github.com/nasim-saaidi/higherlower">in de eerste periode van mijn schooljaar ben ik bezig geweest met het programmeren van een hoger lager spel</a></p></div>
-        <div class="cube cube2"> <p> <a href="https://github.com/arjunsantokhi/Escape-Room"> ik hebt in de themaweek na de eerste periode een escaperoom geprogrammeerd met klasgenoten </a> </p></div>
-        <div class="cube cube3"> <p> <a href="https://github.com/nasim-saaidi/grid-project"> in de tweede periode van mijn eerste schooljaar ben ik bezig geweest met het programmeren van een boter-kaas-en eieren spel</a></p></div>
+        <div class="cube cube1"> <p>
+            <a href="https://github.com/nasim-saaidi/higherlower">in de eerste periode van mijn schooljaar ben ik bezig geweest met het programmeren van een hoger lager spel</a>
+        </p></div>
+        <div class="cube cube2"> <p> 
+            <a href="https://github.com/arjunsantokhi/Escape-Room"> ik hebt in de themaweek na de eerste periode een escaperoom geprogrammeerd met klasgenoten </a> 
+        </p></div>
+        <div class="cube cube3"> <p> 
+            <a href="https://github.com/nasim-saaidi/grid-project"> in de tweede periode van mijn eerste schooljaar ben ik bezig geweest met het programmeren van een boter-kaas-en eieren spel</a>
+        </p></div>
         <div class="cube cube4"></div>
         <div class="cube cube5"></div>
         <div class="cube cube6"></div>
