--- a/page3.html
+++ b/page3.html
@@ -12,26 +12,54 @@
 <body>
     <main>
         <nav class="blocks">
-            <div class="button1"> <a href="index.html">Over mij</a></div> 
-            <div class="button2"> <a href="/page2.html">Projecten</a></div>
-            <div class="button3"> <a href="/page4.html">contact</a></div>
+            <div class="button1">
+                <a href="index.html">
+                    Over mij
+                </a>
+            </div>
+            <div class="button2">
+                <a href="/page2.html">
+                    Projecten
+                </a>
+            </div>
+            <div class="button3">
+                <a href="/page4.html">
+                    contact
+                </a>
+            </div>
         </nav>
         <nav class="navigation">
-            <div class="block1"> <a href="/index.html">Over mij</a> </div>
-            <div class="block2"> <a href="/page2.html">Projecten</a></div>
-            <div class="block3"><a href="/page4.html">contact</a></div>
-        </nav> 
+            <div class="block1">
+                <a href="/index.html">
+                    Over mij
+                </a>
+            </div>
+            <div class="block2">
+                <a href="/page2.html">
+                    Projecten
+                </a>
+            </div>
+            <div class="block3">
+                <a href="/page4.html">
+                    contact
+                </a>
+            </div>
+        </nav>
     </main>
     <div class="wrapper">
         <article>
-            <p class="studie">Studie</p>
+            <p class="studie">
+                Studie
+            </p>
         </article>
         <article class="content">
             <img class="mondriaan" src="/img/153029_Laak2 nieuwbouw.jpg" alt="roc-mondriaan laaghwaterplein">
-            <img class="logo "src="/img/download (1).png" alt="">
-            <p class="text">Ik zit op het ROC Mondriaan op het leeghwaterplein. Ik koos deze school nadat ik niet
+            <img class="logo " src="/img/download (1).png" alt="">
+            <p class="text">
+                Ik zit op het ROC Mondriaan op het leeghwaterplein. Ik koos deze school nadat ik niet
                 doorging naar 5-havo. In de laatste paar weken zijn we bezig geweest met coderen. We werken in sprinten:
-                weken waarin we een bepaalde aantal opdrachten doen. Wij zijn bezig met javascript, html en CSS</p>
+                weken waarin we een bepaalde aantal opdrachten doen. Wij zijn bezig met javascript, html en CSS
+            </p>
         </article>
     </div>
 </body>
