--- a/page4.html
+++ b/page4.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,31 @@
     <title>Document</title>
     <link rel="stylesheet" href="/css/page4.css">
 </head>
+
 <body>
     <main>
         <nav class="blocks">
-            <div class="button1"> 
+            <div class="button1">
                 <a href="index.html"> Over mij</a>
-            </div> 
-            <div class="button2"> <a href="/page2.html"> Projecten</a></div>
-            <div class="button3"> <a href="/page3.html">Studie</a></div>
+            </div>
+            <div class="button2">
+                <a href="/page2.html"> Projecten</a>
+            </div>
+            <div class="button3">
+                <a href="/page3.html">Studie</a>
+            </div>
         </nav>
         <nav class="navigation">
-            <div class="block1"> <a href="/index.html">Over mij</a> </div>
-            <div class="block2"> <a href="/page2.html">Projecten</a></div>
-            <div class="block3"><a href="/page3.html">Studie</a></div>
-        </nav> 
+            <div class="block1">
+                <a href="/index.html">Over mij</a>
+            </div>
+            <div class="block2">
+                <a href="/page2.html">Projecten</a>
+            </div>
+            <div class="block3">
+                <a href="/page3.html">Studie</a>
+            </div>
+        </nav>
     </main>
     <br>
     <article class="contact">
@@ -34,8 +46,9 @@
     </article>
     <br>
     <div class="content">
-    <p class="e-mail">E-mail:</p>
-    <p class="e-mailText">>302263973@student.rocmondriaan.nl </p>
-</div>
+        <p class="e-mail">E-mail:</p>
+        <p class="e-mailText">>302263973@student.rocmondriaan.nl </p>
+    </div>
 </body>
+
 </html>
